Initialize daytrader quotes service
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -278,7 +278,7 @@
 				<daytraderTruststoreLocation>${daytraderKeystoreFolder}/truststore.jks</daytraderTruststoreLocation>
 				<daytraderTruststorePassword>password</daytraderTruststorePassword>
 				<!-- Port -->
-				<serverPort>8080</serverPort>
+				<serverPort>4443</serverPort>
 				<databaseDriver>org.apache.derby.jdbc.EmbeddedDriver</databaseDriver>
 				<databaseUrl>jdbc:derby:tradesdb;create=true</databaseUrl>
 
@@ -455,7 +455,7 @@
 
 									<run>
 										<ports>
-											<port>4443:8080</port>
+											<port>4443:${serverPort}</port>
 										</ports>
 										<wait>
 											<log>Started QuotesApplication</log>
@@ -465,25 +465,6 @@
 								</image>
 							</images>
 						</configuration>
-						<executions>
-							<execution>
-								<id>default</id>
-								<phase>package</phase>
-								<goals>
-									<goal>build</goal>
-									<goal>push</goal>
-								</goals>
-							</execution>
-							<execution>
-								<id>deploy</id>
-								<phase>deploy</phase>
-								<goals>
-									<goal>build</goal>
-									<goal>push</goal>
-									<goal>run</goal>
-								</goals>
-							</execution>
-						</executions>
 					</plugin>
 				</plugins>
 			</build>
