Fix issue 13 in sample-daytrader/sample.daytrader.microservices
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@
 
 
 ##   Configure enbedded servlet container (SSL)
-
+server.port=4443
 server.ssl.enabled=false
 ##
 ## key store settings
@@ -44,3 +44,16 @@ endpoints.health.time-to-live=30000
 ## - https://docs.spring.io/spring-boot/docs/1.5.0.RELEASE/reference/html/production-ready-endpoints.html
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+## Derby database properties
+database.driver=${DAYTRADER_DATABASE_DRIVER:org.apache.derby.jdbc.EmbeddedDriver}
+database.url=${DAYTRADER_DATABASE_URL:jdbc:derby:tradesdb;create=true}
+database.username=${DAYTRADER_DATABASE_USERNAME:}
+database.password=${DAYTRADER_DATABASE_PASSWORD:}
+
+## Service discovery settings
+daytrader.services.gateway=${DAYTRADER_GATEWAY_SERVICE:http://localhost:2443}
+
+daytrader.services.account=${DAYTRADER_ACCOUNTS_SERVICE:http://localhost:1443}
+daytrader.services.portfolios=${DAYTRADER_PORTFOLIOS_SERVICE:http://localhost:3443}
+daytrader.services.quotes=${DAYTRADER_QUOTES_SERVICE:http://localhost:4443}
